@@ -41,3 +41,28 @@ def test_einsum(params, implicit_rhs):
 
     assert native_out.size() == poptorch_out.size()
     torch.testing.assert_allclose(native_out, poptorch_out)
+
+
+@pytest.mark.parametrize("arr_lengths",
+                         ([3], [3, 3], [2, 4], [3, 2, 4], [5, 2, 3, 4]))
+def test_meshgrid(arr_lengths):
+    torch.manual_seed(42)
+
+    class Model(torch.nn.Module):
+        def forward(self):
+            return torch.meshgrid(xs)
+
+    model = Model()
+    poptorch_model = poptorch.inferenceModel(model)
+
+    xs = [torch.randn(arr_length) for arr_length in arr_lengths]
+
+    # Run on CPU
+    native_out = model()
+
+    # Run on IPU
+    poptorch_out = poptorch_model()
+
+    for native, pop in zip(native_out, poptorch_out):
+        assert native.size() == pop.size()
+        torch.testing.assert_allclose(native, pop)
