@@ -20,3 +20,4 @@ New features:
 - Add PoplarExecutor.compile() to compile the model without executing it.
 - Use sphinx-build to generate the documentation.
 - Use Miniconda as build environment.
+- Added support for torch.meshgrid
